# api/swagger.json
@@ -433,18 +433,14 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "page number",
-                        "name": "page",
-                        "in": "query",
-                        "required": true
+                        "type": "string",
+                        "name": "query",
+                        "in": "query"
                     },
                     {
-                        "type": "integer",
-                        "description": "page size",
-                        "name": "page_size",
-                        "in": "query",
-                        "required": true
+                        "type": "string",
+                        "name": "query_key",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -552,18 +548,14 @@
                         "required": true
                     },
                     {
-                        "type": "integer",
-                        "description": "page number",
-                        "name": "page",
-                        "in": "query",
-                        "required": true
+                        "type": "string",
+                        "name": "query",
+                        "in": "query"
                     },
                     {
-                        "type": "integer",
-                        "description": "page size",
-                        "name": "page_size",
-                        "in": "query",
-                        "required": true
+                        "type": "string",
+                        "name": "query_key",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1147,6 +1139,9 @@
                 "description": {
                     "type": "string"
                 },
+                "host_id": {
+                    "type": "integer"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -1371,15 +1366,11 @@
         "internal_search.PatchSearch": {
             "type": "object",
             "required": [
-                "host_id",
                 "publish"
             ],
             "properties": {
                 "description": {
                     "type": "string"
-                },
-                "host_id": {
-                    "type": "integer"
                 },
                 "publish": {
                     "type": "boolean"
@@ -1400,6 +1391,9 @@
                 },
                 "description": {
                     "type": "string"
+                },
+                "host_id": {
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
@@ -1473,6 +1467,17 @@
             "properties": {
                 "url": {
                     "type": "string"
+                }
+            }
+        },
+        "pagination.Page": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
                 }
             }
         },
